# decalcomanie

./: Cargo.toml  README.md
src/: index.html  main.js  main.rs  styles.css  test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: briefcase.rs  captur.rs  lib.rs  main.rs  sellsy.rs  store.rs  tray.rs
