[package]
name = "decalcomanie"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "decalcomanie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ['tray-icon',
    'image-ico',
    'image-png'] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "^2.2.0"
tauri-plugin-positioner = { version = "^2.0.0", features = ["tray-icon"] }
xcap = "0.4.1"
fs_extra = "1.3.0"
base64 = "0.21"
image = { version = "0.24", features = ["png"] }
arboard = "3.5"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }




